# sol

./: .gitignore  README.md  demo.py  demo.tape  main.py  pyproject.toml  sol  sol-alarm  sol_tui.py
docs/: SETUP.md
kasa-mcp/: main.py  pyproject.toml  server.py
sol-ink/: CLAUDE.md  TERMINAL_ANIMATION_RESEARCH.md  package.json  sol-ink  tsconfig.json
sol-ink/src/: App.tsx  animation-core.ts  index.tsx
sol-ink/src/components/: Animation.tsx  CountdownAnimation.tsx  SettingsPanel.tsx  Sun.tsx
sol-ink/src/hooks/: useLampConnection.ts
sol-ink/tools/: stage-comments.json  stage-review.tsx
sol-ink/utils/: render-frames.ts
