[project]
name = "breadboard-visualizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "httpx>=0.28.1",
    "openai>=2.11.0",
    "python-kasa>=0.10.2",
]

[tool.uv.workspace]
members = [
    "kasa-mcp",
]
